leetcode: fix some typo

--- a/computer_system/leetcode/leetcode_everyday/202003.md
+++ b/computer_system/leetcode/leetcode_everyday/202003.md
@@ -3,17 +3,20 @@
 *请定义一个队列并实现函数 max_value 得到队列里的最大值，要求函数max_value、push_back 和 pop_front 的时间复杂度都是O(1)。若队列为空，pop_front 和 max_value 需要返回 -1*
 
 有类似的题目是，如何在O(1)时间内获取栈的最小值。类似的思想，采用两个队列，一个存储原始数据，一个存储可能成为下一个最大值的数据，辅助队列为单调递减队列(即保持从front->rear的数据递减)。为什么要保持递减？
-> * 当新来的数据比前面的数据大，毫无疑问，那些比它大的数据都没有用处了。因为在它们出队列之前，最大值永远都是刚来的这个数。  
+> * 当新来的数据比前面的数据大，毫无疑问，那些比它小的数据都没有用处了。因为在它们出队列之前，最大值永远都是刚来的这个数。  
 > * 当新来的数据比前面数据小，那么前面的数据都出队列之后，它是有可能成为最大值的。
 
 例子：[3, 4, 4, 3, 5]，主队列A，辅助队列B  
 * A: [3], B: [3]
-* A: [3, 4], B: [4] /* B保持从front->rear递减，故3被去掉，4入队列 */
-* A: [3, 4, 4], B: [4, 4] /* 为判断B何时出队列，B非严格单调递减队列 */
-* A: [3, 4, 4, 3], B: [4, 4, 3] /* 直接入队列，因为能保持递减*/
+* A: [3, 4], B: [4] /\* B保持从front->rear递减，故3被去掉，4入队列 \*/
+* A: [3, 4, 4], B: [4, 4] /\* 为判断B何时出队列，B非严格单调递减队列 \*/
+* A: [3, 4, 4, 3], B: [4, 4, 3] /\* 直接入队列，因为能保持递减 \*/
 * A: [3, 4, 4, 3], B: [5]
+
 获取队列最大值就直接从辅助队列的front取值。出队列的时候，如果出队列的值与辅助队列的front位置值相等，辅助队列也要出队列。
+
 具体实现: (push的时候不是O(1)复杂度)
+
 ```
 struct max_queue {
     int value[QUEUE_LEN];
