--- a/computer_system/leetcode/leetcode_everyday/202003.md
+++ b/computer_system/leetcode/leetcode_everyday/202003.md
@@ -1,4 +1,4 @@
-### *2020/03/07 [面试题59 - II. 队列的最大值](https://leetcode-cn.com/problems/dui-lie-de-zui-da-zhi-lcof/)*
+### *2020/03/07 [\[面试题59 - II. 队列的最大值\]](https://leetcode-cn.com/problems/dui-lie-de-zui-da-zhi-lcof/)*
 
 *请定义一个队列并实现函数 max_value 得到队列里的最大值，要求函数max_value、push_back 和 pop_front 的时间复杂度都是O(1)。若队列为空，pop_front 和 max_value 需要返回 -1*
 
@@ -60,5 +60,56 @@ int dequeue(struct max_queue *obj)
         obj->max_front = (obj->max_front + 1) % QUEUE_LEN;
     }
     return value;
+}
+```
+
+### *2020/03/08 [\[322. 零钱兑换\]](https://leetcode-cn.com/problems/coin-change/)*
+*给定不同面额的硬币 coins 和一个总金额 amount。编写一个函数来计算可以凑成总金额所需的最少的硬币个数。如果没有任何一种硬币组合能组成总金额，返回 -1。*
+
+常规的深度优先搜索：
+* 明确递减的方向，即amount的值
+* 由于性能问题，需要用cache保存已经计算了的子问题，该子问题就是amount值对应的最少硬币数，即cache[amount].
+
+```
+#define MIN(a, b) ((a) < (b) ? (a) : (b))
+int coin(int* coins, int coinsSize, int amount, int *cache){
+    int i;
+    int cost = 0, min_cost = INT_MAX;
+
+    if (amount == 0) {
+        return 0;
+    }
+
+    for (i = 0; i < coinsSize; i++) {
+        if (amount - coins[i] < 0) {
+            continue;
+        }
+        if (cache[amount - coins[i]] >= 0) {
+            cost = cache[amount - coins[i]];
+        } else {
+            cost = coin(coins, coinsSize, amount - coins[i], cache);
+        }
+        if (cost < INT_MAX) {
+            min_cost = MIN(cost + 1, min_cost);
+        }
+    }
+    cache[amount] = min_cost;
+    return (min_cost < INT_MAX ? min_cost : -1);
+}
+
+int compare(const void *p1, const void *p2)
+{
+    return (*(int *)p2 - *(int *)p1);
+}
+int coinChange(int* coins, int coinsSize, int amount){
+    int num;
+    int *cost = calloc(1, sizeof(int) * (amount + 1));
+
+    memset(cost, -1, sizeof(int) * (amount + 1));
+    qsort(coins, coinsSize, sizeof(int), compare);
+    num = coin(coins, coinsSize, amount, cost);
+
+    free(cost);
+    return num;
 }
 ```
