--- a/computer_system/leetcode/leetcode_everyday/202003.md
+++ b/computer_system/leetcode/leetcode_everyday/202003.md
@@ -113,3 +113,34 @@ int coinChange(int* coins, int coinsSize, int amount){
     return num;
 }
 ```
+
+### *2020/03/10 [\[543. 二叉树的直径\]](https://leetcode-cn.com/problems/diameter-of-binary-tree/)*
+*给定一棵二叉树，你需要计算它的直径长度。一棵二叉树的直径长度是任意两个结点路径长度中的最大值。这条路径可能穿过根结点。*
+
+```
+int longest_path(struct TreeNode *root, int *longest)
+{
+    int left = 0, right = 0;
+
+    if (!root) {
+        return 0;
+    }
+
+    left = longest_path(root->left, longest);
+    right = longest_path(root->right, longest);
+    if (root->left) {
+        left++;
+    }
+    if (root->right) {
+        right++;
+    }
+    *longest = *longest < (left + right) ? (left + right) : *longest;
+    return (left > right) ? left : right;
+}
+
+int diameterOfBinaryTree(struct TreeNode* root){
+    int longest = 0;
+    (void)longest_path(root, &longest);
+    return longest;
+}
+```
