--- a/computer_system/深入理解计算机系统/第六章存储器层次结构/1-高速缓存.md
+++ b/computer_system/深入理解计算机系统/第六章存储器层次结构/1-高速缓存.md
@@ -22,7 +22,7 @@
     * d-cache: 只保存数据的高速缓存
     * unified-cache: 既保存数据也保存指令的高速缓存
 
-### 高速缓存写字w
+### 高速缓存写
 * 写命中(write hit)
     * 直写(write-through)：立即将w的高速缓存块写回到紧接着的低一层中
     * 写回(write-back)：尽可能推迟更新，只有当替换算法要驱逐这个更新过的块时，才把它写回到紧接着的低一层中。高速缓存行必须为每个高速缓存行维护一个额外的修改位(dirty bit)，表明这个高速缓存行是否被修改过。
