[computer system]: network programming

--- a/computer_system/深入理解计算机系统/第十一章网络编程/1-网络编程.md
+++ b/computer_system/深入理解计算机系统/第十一章网络编程/1-网络编程.md
@@ -14,3 +14,4 @@
 
 * 服务静态内容，即将文件内容拷贝发送
 * 服务动态内容，服务器将调用fork()创建子进程，并调用execve在子进程上下文中执行/cgi-bin/addr程序，子进程将环境变量QUERY_STRING设置为1500&213并进行getenv解析，传递给子进程作为程序参数。
+    * 可以通过dup2()将执行结果重定向到连接上，直接将结果发送
