[readings]: programmer's machematics 2

--- a/readings/科学/程序员的数学.md
+++ b/readings/科学/程序员的数学.md
@@ -54,3 +54,24 @@
 * 卡方分布
 
 ### 6. 估计与检验
+* 最小方差无偏估计
+
+* 最大似然估计
+
+* 贝叶斯估计
+
+### 7. 伪随机数
+
+### 8. 概率论的各类应用
+
+* 最小二乘拟合直线
+
+* 随机游走
+
+* 卡尔曼滤波器
+
+* 马尔可夫链
+
+* 熵
+
+* 信道编码
