[computer science illuminated]: chapter5 computing components

--- a/computer_system/计算机科学概论/第五章计算部件/1-计算部件.md
+++ b/computer_system/计算机科学概论/第五章计算部件/1-计算部件.md
@@ -8,3 +8,4 @@
     * 控制单元(control unit)：控制读取-执行周期
         * 指令寄存器(IR, Instruction Register): 存放当前正在执行的指令的寄存器
         * 程序计数器(PC, Program Counter): 存放下一条要执行的指令的地址的寄存器
+    * ALU与控制单元合称中央处理器(CPU, Central Processing Unit)
