[computer architecture]: chapter1 basic concepts

--- a/computer_system/计算机科学概论/计算机科学概论.md
+++ b/computer_system/计算机科学概论/计算机科学概论.md
@@ -58,4 +58,19 @@
 * 信息隐蔽(information hiding): 高层设计时隐蔽低层的细节。这样低层细节的改变不会影响高层的设计。
 * 抽象(abstraction)：抽象是信息隐蔽的结果
 
-### 第八章 抽象数据类型
+### 第八章 抽象数据类型与子程序
+### 第九章 面向对象设计与高级程序设计语言
+* 高级程序设计语言
+    * 编译型，需要编译器翻译成机器码
+    * 解释型，解释器在翻译过语句后直接执行语句，可以理解为解释器是这类高级语言的模拟器
+
+* 命令式范型(pattern?)
+    * 面向过程
+    * 面向对象
+
+* 声明式范性
+    * 函数式模型
+    * 逻辑编程
+
+### 第十章 操作系统
+
