[computer science illuminated]: completed

--- a/computer_system/计算机科学概论/计算机科学概论.md
+++ b/computer_system/计算机科学概论/计算机科学概论.md
@@ -73,4 +73,38 @@
     * 逻辑编程
 
 ### 第十章 操作系统
+* 内存管理
+    * 单块内存管理
+    * 固定分区内存管理
+        * 最先匹配
+        * 最优匹配
+    * 动态分区内存管理
+        * 最差匹配
+    * 页式内存管理
 
+* CPU管理
+    * 周转周期：进程进入准备就绪到最终完成之间的时间间隔。系统平均周转周期越小越好。
+    * 先到先服务
+    * 最短作业优先
+    * 轮询服务
+
+### 第十一章 文件系统和目录
+
+### 第十二章 信息系统
+* 数据库管理系统
+
+### 第十三章 人工智能
+* 语义网(semantic network)：表示对象之间关系的知识表示法
+
+* 检索树(search tree)：表示对抗性情况（如博弈）中的所有选择的结构
+
+### 第十四章 图形学
+
+### 第十五章 网络
+
+### 第十六章 万维网
+
+### 第十七章 计算机安全
+* 信息安全：保密性(confidentiality)/完整性(integrity)/可用性(availablility)
+
+### 第十八章 计算的限制
