--- a/readings/财经/置身事内.md
+++ b/readings/财经/置身事内.md
@@ -1,1 +1,7 @@
 ## 《置身事内：中国政府与经济发展》 -兰小欢
+
+* 其实也算不上财经的书，算是政治经济？主要讲述介绍政府与经济发展的关系。
+
+* 经济发展需要有强大的政府，强大的政府能够促进经济增长，有更多的试错和扭转可能性
+
+* 没有完美的理论，一切都是在理论指导下，结合国情、地方情况而制定出来的策略 -> 实事求是
