[readings]: 2022-05-27 new readings

--- a/readings/文学/四世同堂.md
+++ b/readings/文学/四世同堂.md
@@ -1,1 +1,6 @@
 ## 《四世同堂》 -老舍
+
+* 瑞宣为了照顾家庭，在北平安稳的教书，进入英国府工作，怀揣一颗爱国之心，考虑事情周到。即使下狱后，也不会放弃家庭去参与抗战。
+* 瑞全为了心中的信念，为了国家，主动出走北平，与敌人战斗。
+* 钱先生在下狱后，为了国家，加入与敌人的战斗中。
+* 三种不同的人物特点，没有好坏之分： 1. 主动出击，全身心投入；2. 被动出击，全身心投入；3. 忍辱
