books: Add LiZicheng's readings

--- a/readings/文学/李自成.md
+++ b/readings/文学/李自成.md
@@ -1,1 +1,15 @@
 ## 《李自成》
+
+1. 一个人只要活着就还没有到达终点，持续思考，持续努力，居安思危。
+
+1. 李自成前期那种攻城略地，开仓放粮深受百姓喜爱，也有了百姓基础，每到一地都有饥民呼应，那时可是风光无限。
+
+1. 我认为李自成的转折点在进入洛阳之后，没有听从李岩的意见，开始设官理民，让百姓安居，这已经预示李自成的信仰不在百姓了。
+
+1. 李自成回到长安建都长安后，想的也不是治理国家，而是打入北京，在北京登极，其实对他而言，这并不是最重要的。但是他却认为打入北京之后，其他地方就能传檄而定，打了十几年的仗，如此想法也真是天真。
+
+1. 自从山海关战败后，按理说也应该会有反弹，李自成是直接溃败，连反弹都没有，还杀李岩兄弟，可见山海关战败只是一个导火索，本身已经烂到根。
+
+1. 没有一个极其坚固的根据地，也是李自成非常大的问题。让我想到了毛主席，真是秦皇汉武，略输文采，唐宗宋祖，稍逊风骚。
+
+1. 对我们普通人的意义就是，初心信仰是什么，重点是什么，是什么支撑往前走这些问题要明白。
